--- a/gittey-config.json
+++ b/gittey-config.json
@@ -13,7 +13,7 @@
     "aliases": [
         {
             "name": "build",
-            "command": "booklisp ./docs/_main.md ./README.md"
+            "command": "node ./node_modules/doculisp/dist/index.js ./docs/_main.dlisp ./README.md"
         },
         {
             "name": "push",
